--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "antd": "^5.24.3",
+    "axios": "^1.8.1",
+    "lightningcss": "^1.29.1",
+    "lightningcss-win32-x64-msvc": "^1.29.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.2.0",
