--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.12",
     "antd": "^5.24.3",
     "axios": "^1.8.2",
+    "jsonwebtoken": "^9.0.2",
     "lightningcss": "^1.29.1",
     "lightningcss-win32-x64-msvc": "^1.29.1",
     "lottie-react": "^2.4.1",
